--- a/ex-src/manifest.json
+++ b/ex-src/manifest.json
@@ -3,7 +3,7 @@
   "version": "0.1",
   "description": "chromeOS側のクリップボードの内容をファイルに反映する。",
   "manifest_version": 2,
-  "permissions": ["storage"],
+  "permissions": ["storage", "clipboardWrite", "clipboardRead"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
